<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="409dp"
        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="339dp"
            android:layout_height="471dp"
            android:background="@color/white"
            android:elevation="10dp"
            android:orientation="vertical"
            app:circularflow_defaultRadius="20dp"
            app:circularflow_radiusInDP="50dp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/signintitle"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:hint="@string/eemail"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/border"
                android:hint="@string/epass"
                android:textColorHint="@color/black"
                app:hintTextColor="@color/black"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:paddingLeft="10dp"
                    android:password="true"
                    android:textColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signin_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="40dp"
                android:background="@drawable/white_background"
                android:text="@string/signin" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="70dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="70dp"
                android:gravity="center"
                android:text="@string/fpass"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/newuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:text="@string/newuser"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="264dp"
            android:layout_height="55dp"
            android:layout_marginBottom="80dp"
            android:background="@color/white"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/white"
                android:src="@drawable/google" />

            <Button
                android:id="@+id/button2"
                android:layout_width="215dp"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:text="@string/sgoogle"
                android:textColor="@color/black" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>